service-front/assets/sass/patterns/_form-popup.scss
// =======================================================
// FORM INSIDE POPUP (CONDENSED)

.form-popup {
    // Taken from main (elements/elements_typography line 7) instead of extending
    @include govuk-font(19);
    -webkit-font-smoothing: antialiased;

    &.popup {
        max-width: 600px;

        @include govuk-media-query($until: 1000px) {
            margin: 2em auto;
        }

        @include govuk-media-query($until: tablet) {
            margin: 2em .5em 10em;
        }
    }

    .form {
        padding: govuk-spacing(6) govuk-spacing(3);

        @include govuk-media-query($until: tablet) {
            padding-top: 0;
        }

        > .heading-medium,
        > .govuk-heading-m {
            @include govuk-media-query($from: tablet) {
                margin-top: 0;
                margin-bottom: 0;
            }
        }

        // For hiding in the popup on tablets and up
        // Used for .heading-medium primarily
        .popup-exclude {
            @include govuk-media-query($from: tablet) {
                display: none;
            }
        }

        &.reuse-details-form {
            .heading-medium,
            .govuk-heading-m {
                @include govuk-media-query($from: tablet) {
                    margin-top: 0;
                }
            }
        }
    }

    .form-group,
    .govuk-form-group {
        margin-top: 0;
        margin-bottom: govuk-spacing(3);

        &.read-only {
            label {
                @include govuk-media-query($until: tablet) {
                    display: none;
                }
            }

            .read-only-value {
                @include govuk-media-query($from: tablet) {
                    margin-top: 7px;
                }
            }
        }
    }

    // Only apply flex row layout to govuk-form-group (from HTML templates).
    // JS-injected wrappers (age-check alert, duplication alert, postcode search)
    // use the older form-group class and must not receive flex layout.
    .govuk-form-group {
        @include govuk-media-query($from: tablet) {
            display: flex;
            flex-wrap: wrap;
            align-items: flex-start;
        }
    }

    .form-label,
    .govuk-label:not(.govuk-checkboxes__label):not(.govuk-radios__label) {
        @include govuk-media-query($from: tablet) {
            width: 150px;
            margin-top: 6px;
            flex-shrink: 0;
        }
    }

    .govuk-input,
    .govuk-textarea,
    .govuk-select {
        @include govuk-media-query($from: tablet) {
            flex: 1;
            min-width: 0;
        }
    }

    .postcode-input {
        @include govuk-media-query($from: tablet) {
            width: 252px;
        }
    }

    .summary,
    .summary-text,
    .address-type-toggle,
    .button,
    .govuk-button-group,
    .alert,
    .single-checkbox-group {
        @include govuk-media-query($from: tablet) {
            margin-left: 150px;
        }
    }

    // Checkbox/radio wrappers must not inherit the flex row layout
    .single-checkbox-group {
        @include govuk-media-query($from: tablet) {
            display: block;
        }
    }

    .postcode-button,
    .button-secondary {
        @include govuk-media-query($from: tablet) {
            margin-left: 0;
        }
    }

    .dob-label {
        @include govuk-media-query($from: tablet) {
            float: left;
        }
    }

    .form-date {
        @include govuk-media-query($from: tablet) {
            margin-left: 150px;
        }

        .form-group,
        .govuk-form-group {
            display: inline-block;
            margin-bottom: 18px;
        }

        .form-label,
        .govuk-label {
            @include govuk-media-query($from: tablet) {
                width: auto;
                flex-shrink: unset;
            }
        }

        .govuk-input,
        .govuk-textarea,
        .govuk-select {
            @include govuk-media-query($from: tablet) {
                flex: unset;
            }
        }

        .govuk-hint {
            @include govuk-media-query($from: tablet) {
                display: none;
            }
        }
    }

    .postcodelookup {
        position: relative;

        .js-PostcodeLookup__search .error-message,
        .js-PostcodeLookup__search .govuk-error-message {
            @include govuk-media-query($from: tablet) {
                width: 79%;
            }
        }

        .spinner {
            @include govuk-media-query($from: tablet) {
                position: absolute;
                top: 10px;
                right: 182px;
            }
        }
    }

    .govuk-error-summary {
        margin: govuk-spacing(3) govuk-spacing(3) 0;
        padding: 10px 10px 4px;

        @include govuk-media-query($until: tablet) {
            padding-bottom: 8px;
        }

        .heading-medium,
        .govuk-heading-m,
        .govuk-error-summary__title {
            margin-bottom: 10px;

            @include govuk-media-query($from: tablet) {
                font-size: 22px;
            }
        }

        p {
            margin-bottom: 4px;
        }
    }

    .form-group-error,
    .govuk-form-group--error {
        border-left: 0;

        @include govuk-media-query($from: tablet) {
            position: relative;
            margin-right: 0;
            padding-left: 0;

            .form-date & {
                margin-right: 20px;
            }
        }

        .form-reuse-details {
            .error-message,
            .govuk-error-message {
                left: 0;
                padding-bottom: 15px;
            }
        }
    }

    .form-date {
        .form-group-error,
        .govuk-form-group--error {
            @include govuk-media-query($from: tablet) {
                margin-right: 20px;
            }
        }
    }

    .error-message,
    .govuk-error-message {
        @include govuk-media-query($from: tablet) {
            position: relative;
            top: 13px;
            left: 150px;
            width: 80%;
            padding-bottom: 15px;
        }
    }

    // scss-lint:disable MergeableSelector
    .form-date {

        .error-message,
        .govuk-error-message {
            @include govuk-media-query($from: tablet) {
                top: 3px;
                left: 0;
                width: 100%;
                padding-bottom: 0px;
            }
        }

        // Hide the normal placement of error messages inside popup
        .error-group {
            display: none;
        }

        // Show new placement of error messages within popup
        .error-group-popup {
            display: block;
        }
    }
    // scss-lint:enable MergeableSelector

    .use-details-link-panel {
        padding: 15px;

        @include govuk-media-query($from: tablet) {
            padding-left: 165px;
        }
    }
}

// No-js hidden button spacing fix for reuse details
.no-js {
    .form-group,
    .govuk-form-group {
        + .form-group.js-hidden,
        + .govuk-form-group.js-hidden {
            margin-top: 30px;
        }

        &.read-only {
            label {
                display: none;
            }
        }
    }
}

